--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   get_storage: ^2.1.1
   awesome_dialog: ^3.1.0
+  uuid: ^3.0.7
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
