--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   get_storage: ^2.1.1
   awesome_dialog: ^3.1.0
   uuid: ^3.0.7
+  intl: ^0.18.1
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
