--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,27 +2,28 @@ name: trivia
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
-  sdk: '>=3.0.0 <4.0.0'
+environment:
+  sdk: ">=3.0.0 <4.0.0"
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.2
   get: 4.6.5
-  flutter: 
+  flutter:
     sdk: flutter
   get_storage: ^2.1.1
   awesome_dialog: ^3.1.0
   uuid: ^3.0.7
   intl: ^0.18.1
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^2.0.0
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
+flutter:
   uses-material-design: true
-  assets: 
+  assets:
     - assets/images/
 
-  
+  shaders:
+    - assets/shaders/new.frag
